# gnome-notes-next

./: .gitignore  README.org  configure  gnome-notes.doap  meson.build  meson_options.txt
build-aux/: make_po.sh  meson_post_install.py  update-authors.sh
build-aux/flatpak/: org.sadiqpk.notes.flatpak.json
completion/: gnome-notes
data/: meson.build  org.sadiqpk.notes.desktop.in  org.sadiqpk.notes.gschema.xml
data/icons/hicolor/: meson.build
docs/: meson.build
docs/man/: gnome-notes.xml  meson.build
po/: LINGUAS  POTFILES.in  meson.build
src/: gn-action-bar.c  gn-action-bar.h  gn-application.c  gn-application.h  gn-enums.h  gn-macro.h  gn-manager.c  gn-manager.h  gn-provider-row.c  gn-provider-row.h  gn-settings-dialog.c  gn-settings-dialog.h  gn-settings.c  gn-settings.h  gn-tag-editor.c  gn-tag-editor.h  gn-tag-row.c  gn-tag-row.h  gn-trace.h.in  gn-types.h  gn-utils.c  gn-utils.h  gn-window.c  gn-window.h  main.c  meson.build
src/notes/: gn-item.c  gn-item.h  gn-note-buffer.c  gn-note-buffer.h  gn-note.c  gn-note.h  gn-plain-note.c  gn-plain-note.h  gn-tag-store.c  gn-tag-store.h  gn-xml-note.c  gn-xml-note.h
src/providers/: gn-goa-provider.c  gn-goa-provider.h  gn-local-provider.c  gn-local-provider.h  gn-memo-provider.c  gn-memo-provider.h  gn-provider-item.c  gn-provider-item.h  gn-provider.c  gn-provider.h
src/resources/: notes.gresource.xml
src/resources/css/: style.css
src/resources/gtk/: menus.ui
src/resources/ui/: gn-action-bar.ui  gn-editor.ui  gn-empty-view.ui  gn-grid-view-item.ui  gn-item-thumbnail.ui  gn-list-view-item.ui  gn-main-view.ui  gn-provider-row.ui  gn-settings-dialog.ui  gn-tag-editor.ui  gn-tag-row.ui  gn-window.ui
src/views/: gn-editor.c  gn-editor.h  gn-empty-view.c  gn-empty-view.h  gn-grid-view-item.c  gn-grid-view-item.h  gn-grid-view.c  gn-grid-view.h  gn-item-thumbnail.c  gn-item-thumbnail.h  gn-list-view-item.c  gn-list-view-item.h  gn-list-view.c  gn-list-view.h  gn-main-view.c  gn-main-view.h  gn-tag-preview.c  gn-tag-preview.h  gn-text-view.c  gn-text-view.h
tests/: meson.build  note-buffer.c  plain-note.c  settings.c  test-note-buffer.c  test-plain-note.c  utils.c  xml-note.c
tests/xml-note/: valid-0.content  valid-0.xml  valid-1.title  valid-3.xml
tests/xml-notes/: valid-0.content  valid-0.markup  valid-0.raw_content  valid-1.content  valid-1.raw_content  valid-1.xml  valid-10.content  valid-12.content  valid-12.markup  valid-12.xml  valid-14.markup  valid-14.xml  valid-2.content  valid-2.xml  valid-4.content  valid-4.markup  valid-4.raw_content  valid-4.xml  valid-5.content  valid-5.xml  valid-6.content  valid-6.markup  valid-6.xml  valid-8.content  valid-8.markup  valid-8.xml  valid-bijiben-0.raw_content  valid-bijiben-0.xml  valid-bijiben-1.raw_content  valid-bijiben-2.markup  valid-bijiben-2.raw_content  valid-bijiben-3.raw_content  valid-bijiben-4.raw_content  valid-bijiben-5.markup  valid-bijiben-5.raw_content  valid-bijiben-5.xml  valid-bijiben-6.raw_content  valid-bijiben-7.content  valid-tomboy-ng-0.raw_content  valid-tomboy-ng-1.raw_content
